# Project-Chimera

./: .coderabbit.yaml  .env.example  .gitignore  ASSESSMENT_CHECKLIST.md  CONTRIBUTING.md  Dockerfile  EXPERIMENTATION_NOTES.md  EXTERNAL_SOURCES.md  LOOM_TRANSCRIPT.md  Makefile  README.md  REPORT.md  RUBRIC_ALIGNMENT.md  RULE_VERSION_HISTORY.md  SECURITY.md  agents.md  pyproject.toml
.cursor/rules/: agent.mdc
.github/workflows/: main.yml
cli_game/: README.md
cli_game/cli_game/: __main__.py  game.py
cli_game/cli_game/tests/: test_game.py
docs/: BACKEND.md  FRONTEND.md
research/: architecture_strategy.md  tooling_strategy.md
scripts/: demo_chimera.py  spec-check.sh
skills/: README.md
skills/autonomous_transaction/: README.md
skills/multimodal_content_generation/: README.md
skills/trend_detection_alerting/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
